# carbon_peak3

./: .gitignore  6年数据更新说明.md  6年的数据.md  CHECKLIST.md  CLAUDE.md  CODE_REVIEW.md  IMPROVEMENTS.md  LICENSE  MODEL_FIX_SUMMARY.md  NaN问题修复指南.md  QUICK_REFERENCE.md  README.md  SIMPLE_QUICK_START.md  SIMPLE_VERSION_GUIDE.md  analyze_data.py  analyze_energy.py  analyze_history.py  chart_data_response.json  check_energy_data.py  check_energy_units.py  check_output.py  debug_response.txt  final_carbon_peak_prediction.py  final_test.py  fix_energy_calculation.py  package-lock.json  process_real_data.py  prompt.md  push_to_github.bat  restart_backend.bat  simple_app.py  start.bat  start.sh  start_simple.bat  test_all_scenarios.py  test_backend_api.py  test_chart_data_api.py  test_chart_generation.py  test_energy_fix.py  test_fixed_model.py  (+34 more)
backend/: .env.example  README.md  __init__.py  app.py  pyproject.toml  requirements.txt
backend/data/: base_year_data.csv  sample_data.csv  sample_data.xlsx  scenarios.json
backend/model/: __init__.py  data_processor.py  kaya_model.py  leap_model.py  prediction_utils.py  scenario_runner.py  simple_data_processor.py  simple_scenario_runner.py  simplified_kaya.py  simplified_leap.py  stirpat_model.py
backend/utils/: __init__.py  export_utils.py  plot_results.py
docs/plans/: 2026-05-03-carbon-peak-enhancement-design.md  2026-05-03-carbon-peak-enhancement-plan.md  2026-05-03-frontend-theme-design.md  (+1 more)
frontend/: .env.development  .env.production  package-lock.json  package.json  playwright.config.cjs  vue.config.js
frontend/src/: App.vue  (+1 more)
(+27 files in other folders)
