[project]
name = "carbon-peak-backend"
version = "0.1.0"
description = "Backend for carbon peak prediction system"
authors = [
    {name = "User", email = "user@example.com"}
]
dependencies = [
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "pandas==2.0.3",
    "numpy==1.24.4",
    "matplotlib==3.7.3",
    "scikit-learn==1.3.0"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]